--- a/RestuarantBackend/package.json
+++ b/RestuarantBackend/package.json
@@ -1,9 +1,11 @@
 {
   "name": "restuarantbackend",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "server.js",
+  "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+     
   },
   "keywords": [],
   "author": "",
